# siem-dashboard

./: .env.example  .gitignore  DESIGN.md  LICENSE  PROJECT.md  README.md  STATUS.md  docker-compose.yml
.claude/agents/: backend-dev.md  design-guardian.md  frontend-dev.md  ops-engineer.md  security-auditor.md  status-keeper.md
.github/workflows/: ci.yml
audits/: 2026-05-03-phase2.md
backend/: .dockerignore  AGENTS.md  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/versions/: 0001_initial_schema.py  0002_refresh_tokens.py
backend/app/: main.py
backend/app/api/: auth.py  health.py
backend/app/core/: config.py  dependencies.py  rate_limit.py  security.py
backend/app/db/: models.py  session.py
backend/app/services/: bootstrap.py
backend/tests/: conftest.py  test_auth.py  test_health.py
frontend/: AGENTS.md  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Agents.test.tsx  Agents.tsx  Home.test.tsx  Home.tsx  Login.test.tsx  Login.tsx
frontend/src/routes/: ProtectedRoute.tsx
frontend/src/types/: index.ts
nginx/: nginx.conf
scripts/: check_health.sh
